Added restate workflow and updated transaction implementation and changed ktor port

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ kotlin_version=2.2.20
 ktor_version=3.3.0
 logback_version=1.4.14
 tigerbeetle_version=0.16.58
+restate_version=2.4.0
+kx_serialization_version=1.9.0
